--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ emailjs.init("q2bR1Di9tLcJVoIcQ"); // Public Key
 // Show/hide service-specific fields
 function toggleFields() {
     const service = document.getElementById('serviceType').value;
-    const allFields = ['birthFields', 'deathFields', 'marriageFields', 'bankFields', 'insuranceFields'];
+    const allFields = ['birthFields','deathFields','marriageFields','bankFields','insuranceFields'];
     allFields.forEach(f => document.getElementById(f).style.display = 'none');
 
     if(service === 'Birth Certificate') document.getElementById('birthFields').style.display = 'block';
@@ -143,21 +143,26 @@ document.getElementById('serviceType').addEventListener('change', toggleFields);
 document.getElementById("applicationForm").addEventListener("submit", function(e){
     e.preventDefault();
 
-    // Collect all fields data, visible or not
-    let data = {};
-    const fields = [
-        'serviceType','name','email','phone','address',
-        'dob','placeOfBirth','dod','placeOfDeath',
-        'spouseName','marriageDate','bankType','accountType',
-        'insuranceType','coverageAmount'
-    ];
-    fields.forEach(f => {
-        const el = document.getElementById(f);
-        if(el) data[f] = el.value || '';
-    });
-
-    data.to_email = "Devendratanwar81@gmail.com";
-    data.subject = "New e-Mitra Application Submission";
+    // Collect all fields data
+    let data = {
+        serviceType: document.getElementById('serviceType').value,
+        name: document.getElementById('name').value,
+        email: document.getElementById('email').value,
+        phone: document.getElementById('phone').value,
+        address: document.getElementById('address').value,
+        dob: document.getElementById('dob').value,
+        placeOfBirth: document.getElementById('placeOfBirth').value,
+        dod: document.getElementById('dod').value,
+        placeOfDeath: document.getElementById('placeOfDeath').value,
+        spouseName: document.getElementById('spouseName').value,
+        marriageDate: document.getElementById('marriageDate').value,
+        bankType: document.getElementById('bankType').value,
+        accountType: document.getElementById('accountType').value,
+        insuranceType: document.getElementById('insuranceType').value,
+        coverageAmount: document.getElementById('coverageAmount').value,
+        to_email: "Devendratanwar81@gmail.com",
+        subject: "New e-Mitra Application Submission"
+    };
 
     emailjs.send("service_zyytoqi", "template_mbcun7u", data)
     .then(() => {
