--- a/index.html
+++ b/index.html
@@ -1,177 +1,242 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>e-Mitra Dashboard - Rajasthan</title>
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
 <style>
-body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f4f7fa; }
-.sidebar { background-color: #007bff; color: white; min-height: 100vh; position: fixed; width: 250px; padding-top: 20px; }
-.sidebar .nav-link { color: white; padding: 10px 20px; }
-.sidebar .nav-link:hover { background-color: #0056b3; }
-.main-content { margin-left: 250px; padding: 20px; }
-.header { background-color: white; padding: 15px; border-bottom: 1px solid #ddd; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-.card { border: none; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: transform 0.3s; }
-.card:hover { transform: translateY(-5px); }
-.service-icon { font-size: 2rem; color: #007bff; }
-.profile-card { background: linear-gradient(135deg, #007bff, #28a745); color: white; }
-.footer { background-color: #343a40; color: white; text-align: center; padding: 10px; position: fixed; bottom: 0; width: calc(100% - 250px); }
-.dynamic-fields { display: none; }
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #eef2f6;
+}
+
+/* Sidebar */
+.sidebar {
+    background: linear-gradient(180deg, #007bff, #004a9f);
+    color: white;
+    min-height: 100vh;
+    position: fixed;
+    width: 260px;
+    padding-top: 25px;
+}
+.sidebar .nav-link {
+    color: white;
+    padding: 12px 25px;
+    transition: 0.3s;
+}
+.sidebar .nav-link:hover {
+    background-color: rgba(255,255,255,0.2);
+    border-radius: 8px;
+}
+
+/* Main Content */
+.main-content {
+    margin-left: 260px;
+    padding: 20px;
+}
+
+/* Header */
+.header {
+    background: linear-gradient(90deg, #007bff, #00a8ff);
+    color: white;
+    padding: 25px;
+    border-radius: 12px;
+    margin-bottom: 20px;
+}
+
+/* Cards */
+.card {
+    border: none;
+    border-radius: 12px;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+}
+
+/* Footer */
+.footer {
+    background-color: #2e2e2e;
+    color: white;
+    text-align: center;
+    padding: 12px;
+    position: fixed;
+    bottom: 0;
+    width: calc(100% - 260px);
+}
+
+.dynamic-fields {
+    display: none;
+}
 </style>
 </head>
 <body>
 
+<!-- SIDEBAR -->
 <div class="sidebar">
-<h4 class="text-center mb-4">e-Mitra Panel</h4>
-<ul class="nav flex-column">
-<li class="nav-item"><a class="nav-link" href="#dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-<li class="nav-item"><a class="nav-link" href="#services"><i class="fas fa-cogs"></i> Services</a></li>
-<li class="nav-item"><a class="nav-link" href="#profile"><i class="fas fa-user"></i> My Profile</a></li>
-<li class="nav-item"><a class="nav-link" href="#apply"><i class="fas fa-plus-circle"></i> Apply Now</a></li>
-<li class="nav-item"><a class="nav-link" href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
-</ul>
+    <h4 class="text-center mb-4">e-Mitra Panel</h4>
+    <ul class="nav flex-column">
+        <li class="nav-item"><a class="nav-link" href="#dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+        <li class="nav-item"><a class="nav-link" href="#services"><i class="fas fa-cogs"></i> Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="#profile"><i class="fas fa-user"></i> My Profile</a></li>
+        <li class="nav-item"><a class="nav-link" href="#apply"><i class="fas fa-plus-circle"></i> Apply Now</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+    </ul>
 </div>
 
+<!-- MAIN CONTENT -->
 <div class="main-content">
+
 <div class="header">
-<h2>Welcome to e-Mitra Dashboard</h2>
-<p>Manage your government services efficiently.</p>
+    <h2>Welcome to e-Mitra Dashboard</h2>
+    <p>Manage your government services efficiently.</p>
 </div>
 
 <!-- APPLY FORM -->
-<section id="apply" class="mt-5">
-<h3>Apply for a Service</h3>
-<div class="card">
-<div class="card-body">
+<section id="apply" class="mt-4">
+    <h3>Apply for a Service</h3>
 
-<form id="applicationForm">
-<div class="mb-3">
-<label class="form-label">Service Type</label>
-<select class="form-select" id="serviceType" required>
-<option value="">Select Service</option>
-<option value="Birth Certificate">Birth Certificate</option>
-<option value="Death Certificate">Death Certificate</option>
-<option value="Marriage Certificate">Marriage Certificate</option>
-<option value="Bank Account">Open Bank Account</option>
-<option value="Insurance Service">Insurance Services</option>
-</select>
-</div>
+    <div class="card p-4 mt-3">
 
-<!-- Common Fields -->
-<div class="mb-3"><label class="form-label">Full Name</label><input type="text" id="name" class="form-control" required></div>
-<div class="mb-3"><label class="form-label">Email</label><input type="email" id="email" class="form-control" required></div>
-<div class="mb-3"><label class="form-label">Phone</label><input type="tel" id="phone" class="form-control" required></div>
-<div class="mb-3"><label class="form-label">Address</label><textarea id="address" class="form-control" required></textarea></div>
+        <form id="applicationForm">
 
-<!-- Service-specific fields -->
-<div id="birthFields" class="dynamic-fields">
-<div class="mb-3"><label class="form-label">Date of Birth</label><input type="date" id="dob" class="form-control"></div>
-<div class="mb-3"><label class="form-label">Place of Birth</label><input type="text" id="placeOfBirth" class="form-control"></div>
-</div>
+            <div class="mb-3">
+                <label class="form-label">Service Type</label>
+                <select class="form-select" id="serviceType" required>
+                    <option value="">Select Service</option>
+                    <option value="Birth Certificate">Birth Certificate</option>
+                    <option value="Death Certificate">Death Certificate</option>
+                    <option value="Marriage Certificate">Marriage Certificate</option>
+                    <option value="Bank Account">Open Bank Account</option>
+                    <option value="Insurance Service">Insurance Services</option>
+                </select>
+            </div>
 
-<div id="deathFields" class="dynamic-fields">
-<div class="mb-3"><label class="form-label">Date of Death</label><input type="date" id="dod" class="form-control"></div>
-<div class="mb-3"><label class="form-label">Place of Death</label><input type="text" id="placeOfDeath" class="form-control"></div>
-</div>
+            <!-- COMMON FIELDS -->
+            <div class="mb-3"><label class="form-label">Full Name</label><input type="text" id="name" class="form-control" required></div>
+            <div class="mb-3"><label class="form-label">Email</label><input type="email" id="email" class="form-control" required></div>
+            <div class="mb-3"><label class="form-label">Phone</label><input type="tel" id="phone" class="form-control" required></div>
+            <div class="mb-3"><label class="form-label">Address</label><textarea id="address" class="form-control" required></textarea></div>
 
-<div id="marriageFields" class="dynamic-fields">
-<div class="mb-3"><label class="form-label">Spouse Name</label><input type="text" id="spouseName" class="form-control"></div>
-<div class="mb-3"><label class="form-label">Marriage Date</label><input type="date" id="marriageDate" class="form-control"></div>
-</div>
+            <!-- SERVICE SPECIFIC FIELDS -->
+            <div id="birthFields" class="dynamic-fields">
+                <div class="mb-3"><label>Date of Birth</label><input type="date" id="dob" class="form-control"></div>
+                <div class="mb-3"><label>Place of Birth</label><input type="text" id="placeOfBirth" class="form-control"></div>
+            </div>
 
-<div id="bankFields" class="dynamic-fields">
-<div class="mb-3"><label class="form-label">Select Bank</label>
-<select class="form-select" id="bankType">
-<option value="">Select Bank</option>
-<option value="AU Small Finance Bank">AU Small Finance Bank</option>
-<option value="SBI">State Bank of India (SBI)</option>
-</select></div>
-<div class="mb-3"><label class="form-label">Account Type</label>
-<select class="form-select" id="accountType">
-<option value="">Select Type</option>
-<option value="Savings">Savings</option>
-<option value="Current">Current</option>
-</select></div>
-</div>
+            <div id="deathFields" class="dynamic-fields">
+                <div class="mb-3"><label>Date of Death</label><input type="date" id="dod" class="form-control"></div>
+                <div class="mb-3"><label>Place of Death</label><input type="text" id="placeOfDeath" class="form-control"></div>
+            </div>
 
-<div id="insuranceFields" class="dynamic-fields">
-<div class="mb-3"><label class="form-label">Insurance Type</label>
-<select class="form-select" id="insuranceType">
-<option value="">Select Type</option>
-<option value="Health">Health Insurance</option>
-<option value="Life">Life Insurance</option>
-<option value="Vehicle">Vehicle Insurance</option>
-</select></div>
-<div class="mb-3"><label class="form-label">Coverage Amount (INR)</label><input type="number" id="coverageAmount" class="form-control"></div>
-</div>
+            <div id="marriageFields" class="dynamic-fields">
+                <div class="mb-3"><label>Spouse Name</label><input type="text" id="spouseName" class="form-control"></div>
+                <div class="mb-3"><label>Marriage Date</label><input type="date" id="marriageDate" class="form-control"></div>
+            </div>
 
-<button type="submit" class="btn btn-primary">Submit Application</button>
-</form>
+            <div id="bankFields" class="dynamic-fields">
+                <div class="mb-3"><label>Select Bank</label>
+                    <select id="bankType" class="form-select">
+                        <option value="">Select Bank</option>
+                        <option value="AU Small Finance Bank">AU Small Finance Bank</option>
+                        <option value="SBI">State Bank of India (SBI)</option>
+                    </select>
+                </div>
 
-</div>
-</div>
+                <div class="mb-3"><label>Account Type</label>
+                    <select id="accountType" class="form-select">
+                        <option value="">Select Type</option>
+                        <option value="Savings">Savings</option>
+                        <option value="Current">Current</option>
+                    </select>
+                </div>
+            </div>
+
+            <div id="insuranceFields" class="dynamic-fields">
+                <div class="mb-3"><label>Insurance Type</label>
+                    <select id="insuranceType" class="form-select">
+                        <option value="">Select Type</option>
+                        <option value="Health">Health Insurance</option>
+                        <option value="Life">Life Insurance</option>
+                        <option value="Vehicle">Vehicle Insurance</option>
+                    </select>
+                </div>
+                <div class="mb-3"><label>Coverage Amount</label><input type="number" id="coverageAmount" class="form-control"></div>
+            </div>
+
+            <button type="submit" class="btn btn-primary w-100 mt-2">Submit Application</button>
+
+        </form>
+
+    </div>
 </section>
 
 </div>
 
+<!-- FOOTER -->
 <div class="footer">
-<p>&copy; 2023 e-Mitra Rajasthan. All rights reserved. Powered by Government of Rajasthan</p>
+<p>&copy; 2024 e-Mitra Rajasthan. All rights reserved.</p>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-emailjs.init("q2bR1Di9tLcJVoIcQ"); // Public Key
+emailjs.init("q2bR1Di9tLcJVoIcQ"); // YOUR PUBLIC KEY
 
-// Show/hide service-specific fields
+// TOGGLE SERVICE FIELD SECTIONS
 function toggleFields() {
     const service = document.getElementById('serviceType').value;
-    const allFields = ['birthFields','deathFields','marriageFields','bankFields','insuranceFields'];
-    allFields.forEach(f => document.getElementById(f).style.display = 'none');
+    const all = ['birthFields','deathFields','marriageFields','bankFields','insuranceFields'];
+    all.forEach(f => document.getElementById(f).style.display = 'none');
 
     if(service === 'Birth Certificate') document.getElementById('birthFields').style.display = 'block';
-    else if(service === 'Death Certificate') document.getElementById('deathFields').style.display = 'block';
-    else if(service === 'Marriage Certificate') document.getElementById('marriageFields').style.display = 'block';
-    else if(service === 'Bank Account') document.getElementById('bankFields').style.display = 'block';
-    else if(service === 'Insurance Service') document.getElementById('insuranceFields').style.display = 'block';
+    if(service === 'Death Certificate') document.getElementById('deathFields').style.display = 'block';
+    if(service === 'Marriage Certificate') document.getElementById('marriageFields').style.display = 'block';
+    if(service === 'Bank Account') document.getElementById('bankFields').style.display = 'block';
+    if(service === 'Insurance Service') document.getElementById('insuranceFields').style.display = 'block';
 }
 
 document.getElementById('serviceType').addEventListener('change', toggleFields);
 
+// SUBMIT FORM
 document.getElementById("applicationForm").addEventListener("submit", function(e){
     e.preventDefault();
 
-    // Collect all fields data
     let data = {
         serviceType: document.getElementById('serviceType').value,
-        name: document.getElementById('name').value,
-        email: document.getElementById('email').value,
-        phone: document.getElementById('phone').value,
-        address: document.getElementById('address').value,
+        full_name: document.getElementById('name').value,
+        user_email: document.getElementById('email').value,
+        user_phone: document.getElementById('phone').value,
+        user_address: document.getElementById('address').value,
+
         dob: document.getElementById('dob').value,
         placeOfBirth: document.getElementById('placeOfBirth').value,
         dod: document.getElementById('dod').value,
         placeOfDeath: document.getElementById('placeOfDeath').value,
+
         spouseName: document.getElementById('spouseName').value,
         marriageDate: document.getElementById('marriageDate').value,
+
         bankType: document.getElementById('bankType').value,
         accountType: document.getElementById('accountType').value,
+
         insuranceType: document.getElementById('insuranceType').value,
         coverageAmount: document.getElementById('coverageAmount').value,
+
         to_email: "Devendratanwar81@gmail.com",
         subject: "New e-Mitra Application Submission"
     };
 
     emailjs.send("service_zyytoqi", "template_mbcun7u", data)
     .then(() => {
-        alert("Application submitted successfully! Email sent to Devendra.");
+        alert("Application submitted successfully! Email sent with all details.");
         document.getElementById("applicationForm").reset();
         toggleFields();
     })
     .catch(err => {
-        alert("Failed to send email. Please try again.");
+        alert("Failed to send email.");
         console.error(err);
     });
 });
@@ -179,3 +244,5 @@ document.getElementById("applicationForm").addEventListener("submit", function(e
 
 </body>
 </html>
+
+
